--- a/views/dash.mustache
+++ b/views/dash.mustache
@@ -2,21 +2,62 @@
 <html>
   <head>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="/scripts/dash-updater.js" type="text/javascript"></script>
+    <script src="/scripts/jquery.sparkline.min.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-      h1 {
-        left: 0;
-        line-height: 200px;
-        margin-top: -100px;
-        position: absolute;
-        text-align: center;
-        top: 50%;
-        width: 100%;
-      }
+			html, body {
+				margin: 0;
+			}
+			.box { float: left; }
+			#root { margin: 0 auto; }
+
+			#uniques { width: 100%; }
+			#pages { width: 50%; }
+			#referers { width: 50%; }
+
+			.bar {
+				display: inline-block;
+				height: 150px;
+				width: 5px;
+				background-color: red;
+			}
+
+			#uniques {
+				height: 150px;
+			}
+			#pages {
+				background-color: blue;
+			}
+			#referers {
+				background-color: red;
+			}
     </style>
+
+		<script>
+		var uniques = new Array();
+
+		$(document).ready(function() {
+			var clientId = $("#clientId").val();
+			setInterval(function() {
+				$.getJSON("/client/" + clientId + "/uniques", function(data) {
+					uniques.push(data.Count)
+					$('#uniques').sparkline(uniques, {width: "100%",height: "100%"});
+				});
+			}, 1000);
+		});
+		</script>
   </head>
   <body>
-    <input id="clientId" type="hidden" value="{{clientId}}" />
-    <h1>0</h1>
+		<input id="clientId" type="hidden" value="{{clientId}}" />
+		<div id='root'>
+			<div class='box' id='uniques'>
+			</div>
+			<div class='box' id='pages'>
+				<h2>Pages</h2>
+			</div>
+			<div class='box' id='referers'>
+				<h2>Referers</h2>
+			</div>
+		</div>
   </body>
 </html>
