be more specific with script tag

--- a/views/dash.mustache
+++ b/views/dash.mustache
@@ -28,7 +28,7 @@
       }
     </style>
 
-    <script>
+    <script type="text/javascript">
       var uniques = new Array();
 
       function updateTopPages() {
