--- a/views/dash.mustache
+++ b/views/dash.mustache
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="/scripts/jquery.sparkline.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="/styles/bootstrap.min.css">
+
     <style>
       html, body {
         margin: 0;
@@ -11,13 +13,14 @@
       .box { float: left; }
       #root { margin: 0 auto; }
 
-      #uniques { width: 100%; }
+      #uniques-graph { width: 100%; }
       #pages { width: 50%; }
       #referers { width: 50%; }
 
-      #uniques {
-        height: 150px;
+      #uniques-graph {
+        height: 80px;
       }
+
       #pages table, #referers table {
         width: 100%;
         text-align: left;
@@ -30,6 +33,17 @@
 
     <script type="text/javascript">
       var uniques = new Array();
+
+			function updateUniques() {
+        var clientId = $("#clientId").val();
+				$.getJSON("/client/" + clientId + "/uniques", function(data) {
+						uniques.push(data.Count)
+						if (uniques.length == 101) { uniques.splice(0, 1); }
+						console.log(uniques);
+						$('#uniques h1').text(data.Count)
+						$('#uniques-graph').sparkline(uniques, {width: "100%",height: "100%", type:"line", tooltipSuffix: " users online"});
+				});
+			}
 
       function updateTopPages() {
         var clientId = $("#clientId").val();
@@ -60,16 +74,11 @@
       }
 
       $(document).ready(function() {
-        var clientId = $("#clientId").val();
-        setInterval(function() {
-          $.getJSON("/client/" + clientId + "/uniques", function(data) {
-            uniques.push(data.Count)
-            $('#uniques').sparkline(uniques, {width: "100%",height: "100%", type:"bar"});
-          });
-        }, 1000);
+				updateUniques();
         updateTopPages();
         updateTopReferers();
 
+        setInterval(updateUniques, 1000);
         setInterval(function() {
           updateTopPages();
           updateTopReferers();
@@ -78,24 +87,31 @@
     </script>
   </head>
   <body>
-    <input id="clientId" type="hidden" value="{{clientId}}" />
-    <div id='root'>
-      <div class='box' id='uniques'>
-      </div>
-      <div class='box' id='pages'>
-        <h2>Pages</h2>
-        <table>
-          <tbody>
-          </tbody>
-        </table>
-      </div>
-      <div class='box' id='referers'>
-        <h2>Referers</h2>
-        <table>
-          <tbody>
-          </tbody>
-        </table>
-      </div>
-    </div>
+		<div class="container">
+			<div class="page-header">
+				<h1>statistic.li <small>{{clientId}}</small></h1>
+				<h2 id="uniques">0 users online</h2>
+			</div>
+
+			<input id="clientId" type="hidden" value="{{clientId}}" />
+			<div id='root'>
+				<div class='box' id='uniques-graph'>
+				</div>
+				<div class='box' id='pages'>
+					<h2>Top Pages</h2>
+					<table class="table">
+						<tbody>
+						</tbody>
+					</table>
+				</div>
+				<div class='box' id='referers'>
+					<h2>Top Referers</h2>
+					<table class="table">
+						<tbody>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
   </body>
 </html>
