--- a/views/dash.mustache
+++ b/views/dash.mustache
@@ -39,8 +39,7 @@
 				$.getJSON("/client/" + clientId + "/uniques", function(data) {
 						uniques.push(data.Count)
 						if (uniques.length == 101) { uniques.splice(0, 1); }
-						console.log(uniques);
-						$('#uniques h1').text(data.Count)
+						$('#uniques').text(data.Count + " users online")
 						$('#uniques-graph').sparkline(uniques, {width: "100%",height: "100%", type:"line", tooltipSuffix: " users online"});
 				});
 			}
