--- a/views/home.mustache
+++ b/views/home.mustache
@@ -24,7 +24,7 @@
   <body>
 		<div class="container">
 			<div class="page-header">
-				<h1>statistic.li <small>dead simple page statistics</small></h1>
+				<h1>statistic.li <small>dead simple site statistics</small></h1>
 			</div>
 			<p>Want a simple view of your sites live stats? Of course you do.</p>
 			<h2>Installation</h2>
