use example.org for example rather

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -32,7 +32,7 @@
 			<h2>Usage</h2>
 			<p>Navigate to <code>statistic.li/client/your-domain-name.com</code> to see statistics!</p>
 			<h2>Demo</h2>
-			<p>Take a look at the <a href="/client/statistic.li">statistic.li statistics</a></p>
+			<p>Take a look at <a href="/client/example.org">example.org</a></p>
 		</div>
   </body>
 </html>
