big shiny demo button

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -24,6 +24,7 @@
   <body>
 		<div class="container">
 			<div class="page-header">
+				<a href="/client/example.org" class="btn btn-success pull-right">See a Demo</a>
 				<h1>statistic.li <small>dead simple site statistics</small></h1>
 			</div>
 			<p>Want a simple view of your sites live stats? Of course you do.</p>
@@ -31,8 +32,6 @@
 			<pre>{{code}}</pre>
 			<h2>Usage</h2>
 			<p>Navigate to <code>statistic.li/client/your-domain-name.com</code> to see statistics!</p>
-			<h2>Demo</h2>
-			<p>Take a look at <a href="/client/example.org">example.org</a></p>
 		</div>
   </body>
 </html>
