add ipad screenie

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -20,12 +20,18 @@
 			ga('send', 'pageview');
 
 		</script>
+		<style>
+			.ipad-screen {
+				width: 100%;
+			}
+		</style>
   </head>
   <body>
 		<div class="container">
 			<div class="page-header">
 				<a href="/client/example.org" class="btn btn-success pull-right">See a Demo</a>
 				<h1>statistic.li <small>dead simple site statistics</small></h1>
+				<img class="ipad-screen" src="/images/ipad.png" alt="statistic.li on an iPad"/>
 			</div>
 			<p>Want a simple view of your sites live stats? Of course you do.</p>
 			<h2>Installation</h2>
