better intro text

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -31,9 +31,9 @@
 			<div class="page-header">
 				<a href="/client/example.org" class="btn btn-success pull-right">See a Demo</a>
 				<h1>statistic.li <small>dead simple site statistics</small></h1>
+				<h2>see what's happening on your site in real time</h2>
 				<img class="ipad-screen" src="/images/ipad.png" alt="statistic.li on an iPad"/>
 			</div>
-			<p>Want a simple view of your sites live stats? Of course you do.</p>
 			<h2>Installation</h2>
 			<pre>{{code}}</pre>
 			<h2>Usage</h2>
