--- a/views/home.mustache
+++ b/views/home.mustache
@@ -24,6 +24,12 @@
 			.ipad-screen {
 				width: 100%;
 			}
+			.page-header h2 {
+				position: absolute;
+				color: #fff;
+				text-shadow: 0 2px rgba(0,0,0,0.3);
+				margin: 1em 0 0 1em;
+			}
 		</style>
   </head>
   <body>
@@ -31,7 +37,7 @@
 			<div class="page-header">
 				<a href="/client/example.org" class="btn btn-success pull-right">See a Demo</a>
 				<h1>statistic.li <small>dead simple site statistics</small></h1>
-				<h2>see what's happening on your site in real time</h2>
+				<h2>see what's happening <br>on your site in real time</h2>
 				<img class="ipad-screen" src="/images/ipad.png" alt="statistic.li on an iPad"/>
 			</div>
 			<h2>Installation</h2>
