use jpg instead of png

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -38,7 +38,7 @@
 				<a href="/client/example.org" class="btn btn-success pull-right">See a Demo</a>
 				<h1>statistic.li <small>dead simple site statistics</small></h1>
 				<h2>see what's happening <br>on your site in real time</h2>
-				<img class="ipad-screen" src="/images/ipad.png" alt="statistic.li on an iPad"/>
+				<img class="ipad-screen" src="/images/ipad.jpg" alt="statistic.li on an iPad"/>
 			</div>
 			<h2>Installation</h2>
 			<pre>{{code}}</pre>
