add 'real-time' to the tag line

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -30,7 +30,7 @@
 		<div class="container">
 			<div class="page-header">
 				<a href="/client/example.org" class="btn btn-success pull-right">See a Demo</a>
-				<h1>statistic.li <small>dead simple site statistics</small></h1>
+				<h1>statistic.li <small>dead simple real-time site statistics</small></h1>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
