replace the word navigate with go

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -37,7 +37,7 @@
 					<h2>Installation</h2>
 					<pre>{{code}}</pre>
 					<h2>Usage</h2>
-					<p>Navigate to <code>statistic.li/client/your-domain-name.com</code> to see statistics!</p>
+					<p>Go to <code>statistic.li/client/your-domain-name.com</code> to see statistics!</p>
 				</div>
 				<div class="col-md-6">
 					<img class="screenshot" src="/images/screen.png" alt="statistic.li screen shot"/>
