--- a/views/home.mustache
+++ b/views/home.mustache
@@ -25,6 +25,7 @@
 				height: 360px;
 		 	}
 		</style>
+		<title>statistic.li - dead simple real-time site statistics</title>
   </head>
   <body>
 		<div class="container">
