make generate button more obvious

--- a/views/dash.mustache
+++ b/views/dash.mustache
@@ -34,7 +34,7 @@
 <body>
   <div class="container">
     <div class="page-header">
-      <button id="generate-traffic" class="btn btn-default pull-right">Generate Traffic</button>
+      <button id="generate-traffic" class="btn btn-default pull-right">Generate Sample Traffic</button>
       <h1>statistic.li <small>{{clientId}}</small></h1>
       <h2 id="uniques">0 users online</h2>
     </div>
